# vinys-toolbelt

./: .gitignore  .publish-guard.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
docs/autonomous-dev-cycle/: README.md
docs/autonomous-dev-cycle/QA deliverable files/viewports/: matrix_critique.md  matrix_results.json
docs/autonomous-dev-cycle/human developer/: README.md  TODO.md
docs/autonomous-dev-cycle/orchestrator/: orchestrator-loop.md
docs/autonomous-dev-cycle/preferences files/: qa_matrix.json  qa_success_criteria.json
docs/autonomous-dev-cycle/preferences files/from-1st-rust-game/: qa_matrix.json  qa_success_criteria.json
docs/autonomous-dev-cycle/skills/app-input-e2e/: SKILL.md
docs/autonomous-dev-cycle/status files/: desktop_4k_retry_unix  desktop_residual_start  desktop_residual_start_unix  qp_handheld_reviewed.txt  recapture_start  reviewed_units.txt  run_start_unix  session.md
mcp/: README.md
mcp/browser-testing/: Cargo.toml  README.md
mcp/browser-testing/browser-bridge/: bridge.mjs  package-lock.json  package.json
mcp/browser-testing/browser-fixtures/: index.html
mcp/browser-testing/browser-tests/: nebula-checkout.yaml  nebula-login.yaml  nebula-smoke.yaml  smoke.yaml
mcp/browser-testing/demo-site/: README.md  cart.html  checkout.html  contact.html  coverage.html  index.html  login.html  product.html  shop.html
mcp/browser-testing/demo-site/assets/: upload-sample.txt
mcp/browser-testing/demo-site/css/: styles.css
mcp/browser-testing/demo-site/js/: app.js
mcp/browser-testing/mcp-scripts/: nebula-e2e.json
mcp/browser-testing/src/: main.rs
mcp/browser-testing/src/browser_testing/: artifacts.rs  bridge.rs  config.rs  mod.rs  safety.rs  server.rs  suite.rs  visual.rs
mcp/full-mcp-client/: Cargo.toml  README.md
mcp/full-mcp-client/src/: config.rs  coverage.rs  display.rs  main.rs  repl.rs  session.rs
plugins/ai-toolbelt/.claude-plugin/: plugin.json
scripts/: README.md  aibox  enable-kvm  publish-guard
services/: README.md
(+23 files in other folders)
