[package]
name = "rmcp-browser-testing"
version = "0.1.0"
edition = "2024"
publish = false
description = "Browser automated testing MCP server: Rust MCP surface + Playwright Node bridge"
license = "Apache-2.0"

[[bin]]
name = "browser-testing-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.2", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "process",
    "signal",
    "fs",
    "time",
    "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde_yml = "0.0.12"
# Versions mirror the rust-sdk examples crate this server was factored out of.
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
