[package]
name = "full-mcp-client"
version = "0.1.0"
edition = "2024"
publish = false
description = "A complete, interactive MCP client built on rmcp (stdio + HTTP)"
license = "Apache-2.0"

[[bin]]
name = "mcp-client"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.2", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
    "client-side-sse",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
toml = "0.8"
colored = "3"
dirs = "6"
rustyline = "15"
async-trait = "0.1"
